--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <!--  app名称   -->
-    <string name="app_name">TVBox</string>
+    <string name="app_name">聚汇影视</string>
 </resources>
