--- a/player/src/main/res/values/strings.xml
+++ b/player/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="exo_track_selection_title_video">视频</string>
     <string name="exo_track_selection_title_audio">音频</string>
     <string name="exo_track_selection_title_text">文字</string>
-    <string name="exo_track_selection_none">空空如也</string>
+    <string name="exo_track_selection_none">未知</string>
     <string name="exo_track_selection_auto">自动</string>
-    <string name="exo_track_unknown">未知类型</string>
+    <string name="exo_track_unknown">未知</string>
     <string name="exo_track_resolution">%1$d × %2$d</string>
     <string name="exo_track_mono">单声道</string>
     <string name="exo_track_stereo">立体声</string>
